--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,26 +7,26 @@ on:
     branches: [ main ]
   workflow_dispatch:
 
-jobs:
-  build:
-    runs-on: ubuntu-latest
-    container: node:16-alpine
+# jobs:
+#   build:
+#     runs-on: ubuntu-latest
+#     container: node:16-alpine
 
-    steps:
-      - uses: actions/checkout@v2
+#     steps:
+#       - uses: actions/checkout@v2
 
-      - name: Install dependencies
-        run: npm install
+#       - name: Install dependencies
+#         run: npm install
 
-      - name: Test
-        uses: mattallty/jest-github-action@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          test-command: "npm run coverage-jenkins"
+#       - name: Test
+#         uses: mattallty/jest-github-action@v1
+#         env:
+#           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+#         with:
+#           test-command: "npm run coverage-jenkins"
 
-      - uses: actions/upload-artifact@v2
-        if: success() || failure()
-        with:
-          name: test-results
-          path: ./coverage/
+#       - uses: actions/upload-artifact@v2
+#         if: success() || failure()
+#         with:
+#           name: test-results
+#           path: ./coverage/
