--- a/.github/workflows/deploy-containere.yml
+++ b/.github/workflows/deploy-containere.yml
@@ -2,8 +2,7 @@ name: Build and Push to GCR
 
 on:
   push:
-    tags:
-      - v*
+    branches: [ main ]
 
 # Environment variables available to all jobs and steps in this workflow
 #  GKE_EMAIL: ${{ secrets.GKE_EMAIL }} 
