--- a/.github/workflows/deploy-containere.yml
+++ b/.github/workflows/deploy-containere.yml
@@ -10,7 +10,7 @@ on:
 env:
   GITHUB_SHA: ${{ github.sha }} 
   GITHUB_REF: ${{ github.ref }} 
-  IMAGE: [nodetry]
+  IMAGE: nodetry
   REGISTRY_HOSTNAME: gcr.io
 
 
