--- a/.github/workflows/deploy-containere.yml
+++ b/.github/workflows/deploy-containere.yml
@@ -24,11 +24,15 @@ jobs:
       uses: actions/checkout@v2
 
     # Setup gcloud CLI
-    - uses: GoogleCloudPlatform/github-actions/setup-gcloud@master
+    # - uses: GoogleCloudPlatform/github-actions/setup-gcloud@master
+    #   with:
+    #     version: '270.0.0'
+    #     service_account_key: ${{ secrets.GCR_KEY }} 
+    - name: Setup Google Cloud SDK
+      uses: mathieu-bour/setup-gcloud@1.3.0
       with:
-        version: '270.0.0'
-        service_account_key: ${{ secrets.GCR_KEY }} 
-
+        service-account-key: ${{ secrets.GCR_KEY }} # base64-encoded service account JSON key
+        confgure-docker: true
     # Configure docker to use the gcloud command-line tool as a credential helper
     - run: |
         # Set up docker to authenticate
