--- a/.github/workflows/deploy-containere.yml
+++ b/.github/workflows/deploy-containere.yml
@@ -10,7 +10,6 @@ on:
 env:
   GITHUB_SHA: ${{ github.sha }} 
   GITHUB_REF: ${{ github.ref }} 
-  BUILD_ID: ${{ env.BUILD_ID }}
   IMAGE: nodetry
   REGISTRY_HOSTNAME: gcr.io
 
@@ -43,17 +42,13 @@ jobs:
     # Build the Docker image
     - name: Build
       run: |
-        export TAG=`echo $GITHUB_REF | awk -F/ '{print $NF}'`
-        echo $TAG
-        docker build -t "$REGISTRY_HOSTNAME"/"$IMAGE":"$BUILD_ID" \
+        docker build -t "$REGISTRY_HOSTNAME"/"$IMAGE":"$GITHUB_REF" \
           --build-arg GITHUB_SHA="$GITHUB_SHA" \
           --build-arg GITHUB_REF="$GITHUB_REF" .
 
     # Push the Docker image to Google Container Registry
     - name: Publish
       run: |
-        export TAG=`echo $GITHUB_REF | awk -F/ '{print $NF}'`
-        echo $TAG
-        docker push "$REGISTRY_HOSTNAME"/"$IMAGE":"$BUILD_ID"
-        docker tag "$REGISTRY_HOSTNAME"/"$IMAGE":"$BUILD_ID" "$REGISTRY_HOSTNAME"/"$IMAGE":latest
+        docker push "$REGISTRY_HOSTNAME"/"$IMAGE":"$GITHUB_REF"
+        docker tag "$REGISTRY_HOSTNAME"/"$IMAGE":"$GITHUB_REF" "$REGISTRY_HOSTNAME"/"$IMAGE":latest
         docker push "$REGISTRY_HOSTNAME"/"$IMAGE":latest
