--- a/.github/workflows/deploy-containere.yml
+++ b/.github/workflows/deploy-containere.yml
@@ -42,13 +42,13 @@ jobs:
     # Build the Docker image
     - name: Build
       run: |
-        docker build -t "$REGISTRY_HOSTNAME"/"$IMAGE":"$GITHUB_REF" \
+        docker build -t "$REGISTRY_HOSTNAME"/"$IMAGE":"$GITHUB_SHA" \
           --build-arg GITHUB_SHA="$GITHUB_SHA" \
           --build-arg GITHUB_REF="$GITHUB_REF" .
 
     # Push the Docker image to Google Container Registry
     - name: Publish
       run: |
-        docker push "$REGISTRY_HOSTNAME"/"$IMAGE":"$GITHUB_REF"
-        docker tag "$REGISTRY_HOSTNAME"/"$IMAGE":"$GITHUB_REF" "$REGISTRY_HOSTNAME"/"$IMAGE":latest
+        docker push "$REGISTRY_HOSTNAME"/"$IMAGE":"$GITHUB_SHA"
+        docker tag "$REGISTRY_HOSTNAME"/"$IMAGE":"$GITHUB_SHA" "$REGISTRY_HOSTNAME"/"$IMAGE":latest
         docker push "$REGISTRY_HOSTNAME"/"$IMAGE":latest
