--- a/.github/workflows/deploy-containere.yml
+++ b/.github/workflows/deploy-containere.yml
@@ -12,6 +12,7 @@ env:
   GITHUB_REF: ${{ github.ref }} 
   IMAGE: nodetry
   REGISTRY_HOSTNAME: gcr.io
+  PROJECT_ID: ${{ secrets.PROJ_ID}}
 
 
 jobs:
@@ -42,13 +43,13 @@ jobs:
     # Build the Docker image
     - name: Build
       run: |
-        docker build -t "$REGISTRY_HOSTNAME"/"$IMAGE":"$GITHUB_SHA" \
+        docker build -t "$REGISTRY_HOSTNAME"/"$PROJECT_ID"/"$IMAGE":"$GITHUB_SHA" \
           --build-arg GITHUB_SHA="$GITHUB_SHA" \
           --build-arg GITHUB_REF="$GITHUB_REF" .
 
     # Push the Docker image to Google Container Registry
     - name: Publish
       run: |
-        docker push "$REGISTRY_HOSTNAME"/"$IMAGE":"$GITHUB_SHA"
-        docker tag "$REGISTRY_HOSTNAME"/"$IMAGE":"$GITHUB_SHA" "$REGISTRY_HOSTNAME"/"$IMAGE":latest
-        docker push "$REGISTRY_HOSTNAME"/"$IMAGE":latest
+        docker push "$REGISTRY_HOSTNAME"/"$PROJECT_ID"/"$IMAGE":"$GITHUB_SHA"
+        docker tag "$REGISTRY_HOSTNAME"/"$PROJECT_ID"/"$IMAGE":"$GITHUB_SHA" "$REGISTRY_HOSTNAME"/"$IMAGE":latest
+        docker push "$REGISTRY_HOSTNAME"/"$PROJECT_ID"/"$IMAGE":latest
