--- a/.github/workflows/deploy-containere.yml
+++ b/.github/workflows/deploy-containere.yml
@@ -23,27 +23,15 @@ jobs:
 
     - name: Checkout
       uses: actions/checkout@v2
-    - name: Build and push Docker images
-      uses: docker/build-push-action@v1.1.0
-      with:
-        # Username used to log in to a Docker registry. If not set then no login will occur
-        username: _json_key
-        # Password or personal access token used to log in to a Docker registry. If not set then no login will occur
-        password: ${{ secrets.GCR_KEY }}
-        # Server address of Docker registry. If not set then will default to Docker Hub
-        registry: gcr.io
-        # Docker repository to tag the image with
-        repository: ${{ secrets.PROJ_ID }}/<DOCKER IMAGE NAME>
-        # Comma-delimited list of tags. These will be added to the registry/repository to form the image's tags
-        tags: latest
-        # Automatically tags the built image with the git reference as per the readme
-        tag_with_ref: true
-        # Automatically tags the built image with the git short SHA as per the readme
-        tag_with_sha: true
-        # Comma-delimited list of labels to add to the built image
-        labels: github-action-build
-        # Whether to push the image
-        push: true
+    - name: trying this action
+      uses: raccoondev/push-docker-gcr
+        with:
+          gcr_host: eu.gcr.io
+          image_name: nodetry
+          image_tag: latest
+          env:
+            GCLOUD_SERVICE_KEY: ${{ secrets.GCR_KEY }}
+            GOOGLE_PROJECT_ID: ${{ secrets.PROJ_ID }}
     # # Setup gcloud CLI
     # # - uses: GoogleCloudPlatform/github-actions/setup-gcloud@master
     # #   with:
