--- a/.github/workflows/deploy-containere.yml
+++ b/.github/workflows/deploy-containere.yml
@@ -24,7 +24,7 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v2
 
-    - uses: google-github-actions/setup-gcloud@master
+    - uses: google-github-actions/setup-gcloud@latest
     - uses: RafikFarhad/push-to-gcr-github-action@v4
       with:
         gcloud_service_key: ${{ secrets.GCR_KEY }}
