--- a/.github/workflows/deploy-containere.yml
+++ b/.github/workflows/deploy-containere.yml
@@ -24,7 +24,9 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v2
 
-    - uses: google-github-actions/setup-gcloud@latest
+    - name: Set up gcloud Cloud SDK environment
+      uses: google-github-actions/setup-gcloud@v0.6.0
+
     - uses: RafikFarhad/push-to-gcr-github-action@v4
       with:
         gcloud_service_key: ${{ secrets.GCR_KEY }}
