--- a/.github/workflows/deploy-containere.yml
+++ b/.github/workflows/deploy-containere.yml
@@ -32,17 +32,25 @@ jobs:
     #   with:
     #     version: '270.0.0'
     #     service_account_key: ${{ secrets.GCR_KEY }} 
-    - name: Setup Google Cloud SDK
-      uses: mathieu-bour/setup-gcloud@1.3.0
+    # - name: Setup Google Cloud SDK
+    #   uses: mathieu-bour/setup-gcloud@1.3.0
+    #   with:
+    #     service-account-key: ${{ secrets.GCR_KEY }} # base64-encoded service account JSON key
+    #     confgure-docker: true
+    - id: 'auth'
+      uses: 'google-github-actions/auth@v0'
       with:
-        service-account-key: ${{ secrets.GCR_KEY }} # base64-encoded service account JSON key
-        confgure-docker: true
+        credentials_json: '${{ secrets.GCR_KEY }}'
+
+    - name: 'Set up Cloud SDK'
+      uses: 'google-github-actions/setup-gcloud@v0'
+
     # Configure docker to use the gcloud command-line tool as a credential helper
     - run: |
         # Set up docker to authenticate
         # via gcloud command-line tool.
         gcloud auth configure-docker
-        
+
     # Build the Docker image
     - name: Build
       run: |
