--- a/.github/workflows/deploy-containere.yml
+++ b/.github/workflows/deploy-containere.yml
@@ -40,7 +40,7 @@ jobs:
     - id: 'auth'
       uses: 'google-github-actions/auth@v0'
       with:
-        credentials_json: '${{ secrets.GCR_KEY }}'
+        credentials_json: ${{ secrets.GCR_KEY }}
 
     - name: 'Set up Cloud SDK'
       uses: 'google-github-actions/setup-gcloud@v0'
