--- a/.github/workflows/deploy-containere.yml
+++ b/.github/workflows/deploy-containere.yml
@@ -13,16 +13,43 @@ env:
   IMAGE: nodetry
   REGISTRY_HOSTNAME: gcr.io
   PROJECT_ID: ${{ secrets.PROJ_ID}}
+  SERVICE: nodetry
+  REGION: us-central1
 
 
 jobs:
-  setup-build-publish-deploy:
+  deploy:
     name: Setup, Build, and Publish
     runs-on: ubuntu-latest
     steps:
 
+    steps:
     - name: Checkout
-      uses: actions/checkout@v2
+      uses: actions/checkout@v3
+
+    - id: 'auth'
+      uses: 'google-github-actions/auth@v0'
+      with:
+        credentials_json: '${{ secrets.GCR_KEY }}'
+
+    - name: Set up Cloud SDK
+      uses: google-github-actions/setup-gcloud@v0
+
+    - name: Authorize Docker push
+      run: gcloud auth configure-docker
+
+    - name: Build and Push Container
+      run: |-
+        docker build -t gcr.io/${{ env.PROJECT_ID }}/${{ env.SERVICE }}:${{  github.sha }} .
+        docker push gcr.io/${{ env.PROJECT_ID }}/${{ env.SERVICE }}:${{  github.sha }}
+    - name: Deploy to Cloud Run
+      run: |-
+        gcloud run deploy ${{ env.SERVICE }} \
+          --region ${{ env.REGION }} \
+          --image gcr.io/${{ env.PROJECT_ID }}/${{ env.SERVICE }}:${{  github.sha }} \
+          --platform "managed" \
+          --quiet
+
 
     # - name: Set up gcloud Cloud SDK environment
     #   uses: google-github-actions/setup-gcloud@v0.6.0
@@ -37,28 +64,28 @@ jobs:
     #   with:
     #     service-account-key: ${{ secrets.GCR_KEY }} # base64-encoded service account JSON key
     #     confgure-docker: true
-    - id: 'auth'
-      uses: 'google-github-actions/auth@v0'
-      with:
-        credentials_json: ${{ secrets.GCR_KEY }}
+    # - id: 'auth'
+    #   uses: 'google-github-actions/auth@v0'
+    #   with:
+    #     credentials_json: ${{ secrets.GCR_KEY }}
 
-    - name: 'Set up Cloud SDK'
-      uses: 'google-github-actions/setup-gcloud@v0'
+    # - name: 'Set up Cloud SDK'
+    #   uses: 'google-github-actions/setup-gcloud@v0'
 
-    # Configure docker to use the gcloud command-line tool as a credential helper
-    - run: |
-        # Set up docker to authenticate
-        # via gcloud command-line tool.
-        gcloud auth configure-docker
+    # # Configure docker to use the gcloud command-line tool as a credential helper
+    # - run: |
+    #     # Set up docker to authenticate
+    #     # via gcloud command-line tool.
+    #     gcloud auth configure-docker
 
-    # Build the Docker image
-    - name: Build
-      run: |
-        docker build -t "$REGISTRY_HOSTNAME"/"$PROJECT_ID"/"$IMAGE":"$GITHUB_SHA" .
+    # # Build the Docker image
+    # - name: Build
+    #   run: |
+    #     docker build -t "$REGISTRY_HOSTNAME"/"$PROJECT_ID"/"$IMAGE":"$GITHUB_SHA" .
 
-    # Push the Docker image to Google Container Registry
-    - name: Publish
-      run: |
-        docker push "$REGISTRY_HOSTNAME"/"$PROJECT_ID"/"$IMAGE":"$GITHUB_SHA"
-        docker tag "$REGISTRY_HOSTNAME"/"$PROJECT_ID"/"$IMAGE":"$GITHUB_SHA" "$REGISTRY_HOSTNAME"/"$IMAGE":latest
-        docker push "$REGISTRY_HOSTNAME"/"$PROJECT_ID"/"$IMAGE":latest
+    # # Push the Docker image to Google Container Registry
+    # - name: Publish
+    #   run: |
+    #     docker push "$REGISTRY_HOSTNAME"/"$PROJECT_ID"/"$IMAGE":"$GITHUB_SHA"
+    #     docker tag "$REGISTRY_HOSTNAME"/"$PROJECT_ID"/"$IMAGE":"$GITHUB_SHA" "$REGISTRY_HOSTNAME"/"$IMAGE":latest
+    #     docker push "$REGISTRY_HOSTNAME"/"$PROJECT_ID"/"$IMAGE":latest
