--- a/.github/workflows/deploy-containere.yml
+++ b/.github/workflows/deploy-containere.yml
@@ -15,13 +15,14 @@ env:
   PROJECT_ID: ${{ secrets.PROJ_ID}}
   SERVICE: nodetry
   REGION: us-central1
+  KEY: {{ secrets.GCR_KEY }}
 
 
 jobs:
   deploy:
     name: Setup, Build, and Publish
     runs-on: ubuntu-latest
-    
+
     steps:
     - name: Checkout
       uses: actions/checkout@v3
@@ -29,7 +30,7 @@ jobs:
     - id: 'auth'
       uses: 'google-github-actions/auth@v0'
       with:
-        credentials_json: '${{ secrets.GCR_KEY }}'
+        credentials_json: '$KEY'
 
     - name: Set up Cloud SDK
       uses: google-github-actions/setup-gcloud@v0
