--- a/.github/workflows/deploy-containere.yml
+++ b/.github/workflows/deploy-containere.yml
@@ -30,7 +30,7 @@ jobs:
     - id: 'auth'
       uses: 'google-github-actions/auth@v0'
       with:
-        credentials_json: $KEY
+        credentials_json: "$KEY"
 
     - name: Set up Cloud SDK
       uses: google-github-actions/setup-gcloud@v0
