--- a/.github/workflows/deploy-containere.yml
+++ b/.github/workflows/deploy-containere.yml
@@ -15,7 +15,6 @@ env:
   PROJECT_ID: ${{ secrets.PROJ_ID}}
   SERVICE: nodetry
   REGION: us-central1
-  KEY: ${{ secrets.GCR_KEY }}
 
 
 jobs:
@@ -30,7 +29,7 @@ jobs:
     - id: 'auth'
       uses: 'google-github-actions/auth@v0'
       with:
-        credentials_json: "$KEY"
+        credentials_json: {{ secrets.GCR_KEY}}
 
     - name: Set up Cloud SDK
       uses: google-github-actions/setup-gcloud@v0
